# code_samples

./: README.md
casts_explained/: CMakeLists.txt
casts_explained/src/: user_defined_casts.cpp
ctad/: CMakeLists.txt  README.md
ctad/src/: ctad.cpp
destructive_exceptions/: CMakeLists.txt  README.md
destructive_exceptions/src/: common.hpp  exception_queue.cpp  problem_uncaught_exception.cpp  simple_nested_exceptions.cpp  simple_throw_catch.cpp  use_uncaught_exception.cpp  use_uncaught_exceptions.cpp
explicit_explained/: CMakeLists.txt  README.md
explicit_explained/src/: explicit_explained.cpp
using_std_thread/: CMakeLists.txt
using_std_thread/src/: using_std_thread.cpp
value_categories/: CMakeLists.txt
value_categories/src/: value_categories.cpp
